# accelerate-examples

./: .gitignore  .travis.yml  Dockerfile  README.md  accelerate-examples.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
.github/workflows/: ci.yml
examples/blackscholes/: Config.hs  Main.hs
examples/blackscholes/Random/: Array.hs
examples/canny/: configure.sh
examples/canny/src-acc/: Canny.hs  Main.hs  Wildfire.hs
examples/classify/: Config.hs  Evaluate.hs  Image.hs  Loader.hs  Main.hs  Network.hs  Trainer.hs
examples/crystal/: Main.hs
examples/dotp/: Config.hs  Main.hs
examples/fatmegapar/: Config.hs  Main.hs
examples/fft/src-acc/: Config.hs  FFT.hs  HighPass.hs  Main.hs
examples/fluid/src-acc/: Config.hs  Fluid.hs  World.hs
examples/hashcat/: Config.hs  Digest.hs  MD5.hs  Main.hs  README.md
examples/julia/: Config.hs  Julia.hs  Main.hs  Palette.hs  README.md  World.hs
examples/juliasets/: Config.hs  IterFuns.hs  Lib.hs  Main.hs
examples/kmeans/: Config.hs  Kmeans.hs  Main.hs
examples/mandelbrot/: Config.hs  Main.hs  Mandel.hs  World.hs
examples/megapar/: Config.hs  Main.hs
examples/memboundmegapar/: Config.hs  Main.hs
examples/mmult/: Config.hs  Main.hs
examples/mvm/: Config.hs  MVM.hs  Main.hs  Matrix.hs
examples/n-body/: Config.hs  Main.hs  Main_duped.hs  Test.hs
examples/n-body/Common/: Body.hs  World.hs
examples/n-body/Random/: Position.hs
examples/nofib/QuickCheck/Arbitrary/: Shape.hs
examples/nofib/Test/: Base.hs
examples/nofib/Test/Prelude/: IndexSpace.hs  Permute.hs  Replicate.hs  Sequences.hs  Sequencing.hs  Stencil.hs
examples/nofib/Test/Spectral/: BlackScholes.hs  SMVM.hs
examples/pagerank/: Config.hs  Count.hs  Load.hs  Main.hs  Rank.hs  Step.hs  Time.hs
examples/quicksort/: Config.hs  Main.hs  QuickSort.hs  README.md  input.txt
examples/ray/: Vec3.hs
examples/ray/Common/: Type.hs
examples/ray/Gloss/: Draw.hs
examples/ray/Ray/: Trace.hs
examples/ray/Scene/: Light.hs  Object.hs  State.hs  World.hs
examples/smoothlife/: Config.hs  Main.hs  SmoothLife.hs
examples/smoothlife/Random/: Splat.hs
examples/smvm/: Main.hs  SMVM.hs
examples/tests/: Config.hs
examples/tunnel/: Main.hs
icebox/: travis.yml
lib/: ParseArgs.hs
lib/Data/Array/Accelerate/Examples/: Internal.hs
lib/Data/Array/Accelerate/Examples/Internal/: Backend.hs  Codespeed.hs  Criterion.hs  Interactive.hs  Monitoring.hs  ParseArgs.hs  Report.hs  TH.hs  TestFramework.hs  Util.hs
lib/Data/Array/Accelerate/Examples/Internal/Criterion/: Config.hs
lib/Data/Array/Accelerate/Examples/Internal/Random/: Array.hs
lib/Data/Array/Accelerate/Examples/Internal/TestFramework/: Config.hs
